option java_package = "com.GuavaRedisHbase";

option java_outer_classname = "RedisHbasePro";
option java_generic_services = true;
option optimize_for = SPEED;

message getValueRequest {
  required string getKey = 1;
}

message getBackResultResponse {
  required string BackResult = 1;
}

service RedisHbaseProService {
  rpc getVauleFromCo(getValueRequest)
    returns(getBackResultResponse);
}